figuring out work-flow, using abstract Game class to implement all other Game types

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             of their teams, individual players, and college recruiters</p>
           </div>
         </div>
-
-    <!--NEW PLAYERS TABLE:
+<div class="container-fluid">
+      <!--NEW PLAYERS TABLE:
           This will be a table with text inputs for initializing new players
           that can be selected for games
       -->
@@ -66,11 +66,14 @@
 
           </tbody>
         </table>
+  </div>
 
 
 
     <script type="text/javascript" src="assets/js/Stats.js"></script>
     <script type="text/javascript" src="assets/js/Player.js"></script>
+    <script type="text/javascript" src="assets/js/Game.js"></script>
+    <script type="text/javascript" src="assets/js/BaseballGame.js"></script>
     <script type="text/javascript" src="assets/js/tester.js"></script>
   </body>
 </html>
