--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </head>
-  <body>
+  <body class="text-white bg-secondary">
     <!--This page will act as the main user menu-->
         <div class="container-fluid">
-          <div class="jumbotron">
+          <div class="jumbotron bg-dark">
             <h1>Your Sports Recorder</h1>
             <hr>
-            <p>This app will allow schools to record sports data for the benefits
+            <p>This app allows schools to record sports data for the benefits
             of their teams, individual players, and college recruiters</p>
           </div>
         </div>
@@ -36,6 +36,20 @@
             </tr>
           </thead>
           <tbody>
+            <tr>
+              <td>
+                <input type="text" class="text-white bg-dark container-fluid" name="name" value="" required>
+              </td>
+              <td>
+                <input type="text" class="text-white bg-dark container-fluid" name="dob" value="">
+              </td>
+              <td>
+                <input type="text" class="text-white bg-dark container-fluid" name="grade" value="">
+              </td>
+              <td>
+                <input type="text" class="text-white bg-dark container-fluid" name="sports" value="">
+              </td>
+            </tr>
           </tbody>
         </table>
 
@@ -51,9 +65,9 @@
 
       <!--BUTTONS AND MENUS FOR DIFFERENT TABLE SORTING METHODS WILL GO HERE-->
       <div class="text-white bg-dark">
-          Past Players
+          Current Players
       </div>
-        <table class="table table-striped table-dark" id="pastPlayersTable">
+        <table class="table table-striped table-dark" id="currentPlayersTable">
           <thead>
             <tr>
               <th scope="col">Name</th>
@@ -68,7 +82,7 @@
         </table>
   </div>
 
-
+    <script src="https://www.gstatic.com/firebasejs/5.3.1/firebase.js"></script>
     <script>
       // Initialize Firebase
       var config = {
@@ -81,11 +95,11 @@
       };
       firebase.initializeApp(config);
     </script>
+    <script type="text/javascript" src="assets/js/inputLogic.js"></script>
     <script type="text/javascript" src="assets/js/Stats.js"></script>
     <script type="text/javascript" src="assets/js/Player.js"></script>
     <script type="text/javascript" src="assets/js/Game.js"></script>
     <script type="text/javascript" src="assets/js/BaseballGame.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/5.3.1/firebase.js"></script>
     <script type="text/javascript" src="assets/js/Database.js"></script>
     <script type="text/javascript" src="assets/js/tester.js"></script>
   </body>
