adding game stat input and game stat tracking modal

--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
         </table>
 
 
+        <div class="text-center buttons">
+          <button type="button" class="btn btn-outline-dark" id="start_game" data-toggle="modal" data-target="#statsModal">Start Game</button>
+          <button type="button" class="btn btn-outline-light" id="enter_player">Enter Player</button>
+        </div>
 
     <!--CURRENT PLAYERS TABLE:
           This will be a list of all the possible players to choose from it will
@@ -82,6 +86,116 @@
 
           </tbody>
         </table>
+  </div>
+
+
+  <!-- Enter Stats Modal -->
+  <div class="modal fade" id="statsModal" tabindex="-1" role="dialog" aria-labelledby="gameModalTitle" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+      <div class="modal-content text-white bg-dark">
+        <div class="modal-header">
+          <h5 class="modal-title" id="gameModalTitle">Enter Stats to Record</h5>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary" id="saveStatsButton" data-dismiss="modal">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Record Stats Modal -->
+  <div class="modal fade" id="gameModal" tabindex="-1" role="dialog" aria-labelledby="gameModalTitle" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+      <div class="modal-content text-white bg-dark">
+        <div class="modal-header">
+          <h5 class="modal-title" id="gameModalTitle">Record Stats</h5>
+        </div>
+        <div class="modal-body">
+          <table class="table table-striped table-dark" id="modalTable">
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+          </table>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
   </div>
     <script src="https://www.gstatic.com/firebasejs/5.3.1/firebase.js"></script>
     <script>
