--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 
 
         <div class="text-center buttons">
-          <button type="button" class="btn btn-outline-dark" id="start_game" data-toggle="modal" data-target="#statsModal">Start Game</button>
-          <button type="button" class="btn btn-outline-light" id="enter_player">Enter Player</button>
+          <button type="button" class="btn btn-outline-dark btn-lg" id="start_game" data-toggle="modal" data-target="#pickGameModal">Start Game</button>
+          <button type="button" class="btn btn-outline-light btn-lg" id="enter_player">Enter Player</button>
         </div>
 
     <!--CURRENT PLAYERS TABLE:
@@ -71,7 +71,7 @@
       <div class="text-white bg-dark">
           Current Players
       </div>
-        <table class="table table-striped table-dark" id="currentPlayersTable">
+        <table class="table table-dark table-striped" id="currentPlayersTable">
           <thead>
             <tr>
               <th scope="col">Name</th>
@@ -82,26 +82,23 @@
               <th></th>
             </tr>
           </thead>
-          <tbody>
-
-          </tbody>
         </table>
   </div>
 
 
-  <!-- Enter Stats Modal -->
-  <div class="modal fade" id="statsModal" tabindex="-1" role="dialog" aria-labelledby="gameModalTitle" aria-hidden="true">
+  <!--PICK YOUR GAME MODAL-->
+  <div class="modal fade" id="pickGameModal" tabindex="-1" role="dialog" aria-labelledby="gameModalTitle" aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
       <div class="modal-content text-white bg-dark">
         <div class="modal-header">
-          <h5 class="modal-title" id="gameModalTitle">Enter Stats to Record</h5>
+          <h5 class="modal-title" id="gameModalTitle">Pick Your Game</h5>
         </div>
         <div class="modal-body">
           ...
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary" id="saveStatsButton" data-dismiss="modal">Save changes</button>
+          <button type="button" class="btn btn-primary" id="pickedGameButton" data-dismiss="modal">Start</button>
         </div>
       </div>
     </div>
