--- a/index.html
+++ b/index.html
@@ -94,11 +94,13 @@
           <h5 class="modal-title" id="gameModalTitle">Pick Your Game</h5>
         </div>
         <div class="modal-body">
-          ...
+          <img id='playBaseball'class="sports-modal-img" src="assets/textures/baseball.png" alt="" data-dismiss="modal">
+          <img id='playFootball' class="sports-modal-img-larger" src="assets/textures/football.png" alt="">
+          <img id='playSoccer' class="sports-modal-img" src="assets/textures/soccerball.png" alt="">
+          <img id='playBasketball' class="sports-modal-img" src="assets/textures/basketball.png" alt="">
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary" id="pickedGameButton" data-dismiss="modal">Start</button>
         </div>
       </div>
     </div>
@@ -109,82 +111,11 @@
     <div class="modal-dialog modal-lg" role="document">
       <div class="modal-content text-white bg-dark">
         <div class="modal-header">
-          <h5 class="modal-title" id="gameModalTitle">Record Stats</h5>
+          <h5 class="modal-title" id="gameModalTitle">Input Stats</h5>
         </div>
         <div class="modal-body">
           <table class="table table-striped table-dark" id="modalTable">
-            <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
+            
           </table>
         </div>
         <div class="modal-footer">
@@ -207,6 +138,7 @@
       };
       firebase.initializeApp(config);
     </script>
+    <script type="text/javascript" src="assets/js/Position.js"></script>
     <script type="text/javascript" src="assets/js/Stats.js"></script>
     <script type="text/javascript" src="assets/js/Player.js"></script>
     <script type="text/javascript" src="assets/js/Game.js"></script>
