failing forward still

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <h5 class="modal-title" id="gameModalTitle">Pick Your Game</h5>
         </div>
         <div class="modal-body">
-          <img id='playBaseball'class="sports-modal-img" src="assets/textures/baseball.png" alt="" data-dismiss="modal">
+          <img id='playBaseball'class="sports-modal-img" src="assets/textures/baseball.png" alt="">
           <img id='playFootball' class="sports-modal-img-larger" src="assets/textures/football.png" alt="">
           <img id='playSoccer' class="sports-modal-img" src="assets/textures/soccerball.png" alt="">
           <img id='playBasketball' class="sports-modal-img" src="assets/textures/basketball.png" alt="">
@@ -115,7 +115,7 @@
         </div>
         <div class="modal-body">
           <table class="table table-striped table-dark" id="modalTable">
-            
+
           </table>
         </div>
         <div class="modal-footer">
@@ -145,5 +145,6 @@
     <script type="text/javascript" src="assets/js/BaseballGame.js"></script>
     <script type="text/javascript" src="assets/js/Database.js"></script>
     <script type="text/javascript" src="assets/js/inputLogic.js"></script>
+    <script type="text/javascript" src="assets/js/playGame.js"></script>
   </body>
 </html>
