testing some bootstrap for modal table and making database update logic

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               </td>
               <td>
                 <input type="text" class="text-white bg-dark container-fluid" name="sports" value="">
-              </td>
+              </td>   
             </tr>
           </tbody>
         </table>
@@ -120,7 +120,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-secondary" name="button">Add Player</button>
+          <button id="addPlayerButton" type="button" class="btn btn-secondary" name="button">Add Player</button>
           <button type="button" class="btn btn-primary">Save changes</button>
         </div>
       </div>
@@ -148,7 +148,7 @@
     <script type="text/javascript" src="assets/js/Game.js"></script>
     <script type="text/javascript" src="assets/js/BaseballGame.js"></script>
     <script type="text/javascript" src="assets/js/Database.js"></script>
-    <script type="text/javascript" src="assets/js/inputLogic.js"></script>
     <script type="text/javascript" src="assets/js/playGame.js"></script>
+    <script type="text/javascript" src="assets/js/inputLogic.js"></script>
   </body>
 </html>
