still failing forward!

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               </td>
               <td>
                 <input type="text" class="text-white bg-dark container-fluid" name="sports" value="">
-              </td>   
+              </td>
             </tr>
           </tbody>
         </table>
@@ -119,7 +119,7 @@
           </table>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+          <button id="closeGameButton" type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
           <button id="addPlayerButton" type="button" class="btn btn-secondary" name="button">Add Player</button>
           <button type="button" class="btn btn-primary">Save changes</button>
         </div>
