--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           <h5 class="modal-title" id="gameModalTitle">Input Stats</h5>
         </div>
         <div class="modal-body text-center recordGameModal">
-          <table class="table table-striped table-dark" id="modalTable">
+          <table class="table table-striped table-dark container-fluid" id="modalTable">
 
           </table>
         </div>
