--- a/index.html
+++ b/index.html
@@ -127,6 +127,25 @@
     </div>
   </div>
 
+  <!--ADD PLAYER TO EXISTING GAME MODAL-->
+  <div class="modal fade" id="addPlayersModal" tabindex="-1" role="dialog" aria-labelledby="gameModalTitle" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+      <div class="modal-content text-white bg-dark">
+        <div class="modal-header">
+          <h5 class="modal-title" id="gameModalTitle">Add Player</h5>
+        </div>
+        <div class="modal-body text-center recordGameModal">
+          <table class="table table-striped table-dark container-fluid" id="addPlayerTable">
+
+          </table>
+        </div>
+        <div class="modal-footer">
+          <button id="" type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+          <button id="" type="button" class="btn btn-secondary" name="button">Add Players</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
 
     <script src="https://www.gstatic.com/firebasejs/5.3.1/firebase.js"></script>
