--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           <h5 class="modal-title" id="gameModalTitle">Add Player</h5>
         </div>
         <div class="modal-body text-center recordGameModal">
-          <table class="table table-striped table-dark container-fluid" id="addPlayerTable">
+          <table class="table table-striped table-dark container-fluid" id="addPlayersTable">
 
           </table>
         </div>
