need to add closures and make js less html structure dependent

--- a/index.html
+++ b/index.html
@@ -148,6 +148,13 @@
   </div>
 
 
+<script type="text/plain" id="playrRowTempl">
+<tr class="container-fluid" data-player>
+  <td>
+  </td>
+</tr>
+</script>
+
     <script src="https://www.gstatic.com/firebasejs/5.3.1/firebase.js"></script>
     <script>
       // Initialize Firebase
