still don't know if everything is working perfectly, everything is seemingly though!

--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
             <tr>
               <th scope="col">Name</th>
               <th scope="col">Grade Level</th>
-              <th scope="col">Active Sport</th>
             </tr>
           </thead>
           <tbody>
@@ -41,9 +40,6 @@
               </td>
               <td>
                 <input type="text" class="text-white bg-dark container-fluid" name="grade" value="">
-              </td>
-              <td>
-                <input type="text" class="text-white bg-dark container-fluid" name="sports" value="">
               </td>
             </tr>
           </tbody>
@@ -72,7 +68,7 @@
             <tr>
               <th scope="col">Name</th>
               <th scope="col">Grade Level</th>
-              <th scope="col">Active Sport</th>
+              <th scope="col">Sports</th>
               <th scope="col">Select</th>
               <th></th>
             </tr>
@@ -144,6 +140,17 @@
 
 
 <!--THIS IS HOW PLAYER TABLE ROWS NEED TO BE MADE-->
+<script type="text/plain" id="currentPlayersTableHeader">
+  <tr>
+    <th scope="col">Name</th>
+    <th scope="col">Grade Level</th>
+    <th scope="col">Sports</th>
+    <th scope="col">Select</th>
+    <th></th>
+  </tr>
+</script>
+
+
 <script type="text/plain" id="playerRowTemplate">
   <tr class="playerRow">
 
