--- a/index.html
+++ b/index.html
@@ -177,6 +177,31 @@
   </td>
 </script>
 
+<script type="text/plain" id="modalTableHeaderTemplate">
+  <tr>
+    <td></td>
+  </tr>
+</script>
+
+
+<script type="text/plain" id="modalTableDataTemplate">
+  <td>
+  </td>
+</script>
+
+<script type="text/plain" id="modalTableToolTipTemplate">
+  <button type="button" class="btn btn-dark statAbreviations" data-toggle="tooltip" data-placement="bottom" title="">
+  </button>
+</script>
+
+<script type="text/plain" id="countableStatInputTemplate">
+  <td>
+    <button type='button' class='btn btn-dark btn-sm decrementButton'> - </button>
+    <input type='text' class='bg-secondary text-white text-center' value='0'>
+    <button type='button' class='btn btn-dark btn-sm incrementButton'> + </button>
+  </td>
+</script>
+
 
     <script src="https://www.gstatic.com/firebasejs/5.3.1/firebase.js"></script>
     <script>
