adding more classes and cleaning up the js so it is less html-structure dependent

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <input type="text" class="text-white bg-dark container-fluid" name="name" value="">
               </td>
               <td>
-                <input type="text" class="text-white bg-dark container-fluid" name="grade" value="">
+                <input type="text" class="text-white bg-dark container-fluid" name="grade" placeholder="K-12">
               </td>
             </tr>
           </tbody>
